--- a/Style/style.css
+++ b/Style/style.css
@@ -73,3 +73,51 @@ p{
     justify-content: space-between;
     align-items: center;
 }
+/*---------Popular Collection-----*/
+
+.collection-title{
+    font-size: 28px;
+    color: #3A3A3A;
+    
+    text-align: center;
+}
+.collections{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+.collection-details{
+    margin-left: 25px;
+    margin: 15px 15px;
+    padding: 15px;
+    border-radius: 25px;
+    background-color: white;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+    
+}
+.collection-details img{
+    width: 100%;
+}
+.info-head{
+    font-size: 28px;
+    color: #18191F;
+}
+.info-price{
+    font-size: 24px;
+    color: rgba(0, 0, 0, 0.87);
+}
+.ratting{
+    margin: 0;
+}
+.fa-star, .fa-star-half-stroke{
+    color: tomato;
+}
+.ratting small{
+    color: #787885;
+
+}
+.next-page{
+    right: 50%;
+    font-size: 16px;
+    color: rgba(224, 44, 109, 0.87);
+
+}
