--- a/Style/style.css
+++ b/Style/style.css
@@ -105,9 +105,7 @@ p{
     font-size: 24px;
     color: rgba(0, 0, 0, 0.87);
 }
-.ratting{
-    margin: 0;
-}
+
 .fa-star, .fa-star-half-stroke{
     color: tomato;
 }
@@ -147,4 +145,18 @@ p{
     margin-right: 15px;
     padding: 5px;
     border-radius: 5px;
+}
+
+/*-------Media Query--------*/
+
+@media only screen and (max-width:677px) {
+    .navbars{
+        grid-template-columns: repeat(1 , 1fr);
+    }
+    .container{
+        flex-direction: column-reverse;
+    }
+    .half-width img{
+        width: 100%;
+    }
 }
